src.3/objects/How_To_Guides__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>A step by step walk through of a feature</description>
    <label>How To Guide</label>
    <pluralLabel>How To Guides</pluralLabel>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>A list of instructions on how to do a task</description>
        <inlineHelpText>Please list your how to guide in a list format.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
</CustomObject>